<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addTaskPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD TASK"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/chosenFileButton" />

    <Button
        android:id="@+id/chosenFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose File"
        app:layout_constraintBottom_toTopOf="@+id/addTaskPageButton"
        app:layout_constraintEnd_toEndOf="@+id/addTaskPageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/addTaskPageButton"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/addTaskTitle"
        android:layout_width="131dp"
        android:layout_height="55dp"
        android:text="Add Task"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/taskTitle"
        app:layout_constraintEnd_toEndOf="@+id/taskTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/taskTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Tasks: 0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskPageButton" />

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="My Task"
        app:layout_constraintBottom_toTopOf="@+id/taskDescription"
        app:layout_constraintEnd_toEndOf="@+id/taskDescription"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/taskDescription"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTitle" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Do Something"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="36dp"
        android:text="Task Title"
        app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="36dp"
        android:text="Task Description"
        app:layout_constraintBottom_toBottomOf="@+id/taskDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="223dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/chosenFileButton"
        app:layout_constraintEnd_toEndOf="@+id/chosenFileButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/chosenFileButton"
        app:layout_constraintTop_toBottomOf="@+id/taskDescription">

        <TextView
            android:id="@+id/teamsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Teams" />

        <RadioButton
            android:id="@+id/cardinalsRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="Arizona Cardinals"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/billsRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="Buffalo Bills"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/seahawksRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="Seattle Seahawks"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/chosenFileText"
        android:layout_width="87dp"
        android:layout_height="28dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chosenFileButton" />

</androidx.constraintlayout.widget.ConstraintLayout>