<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="179dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="Login"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameLogin"
        app:layout_constraintEnd_toEndOf="@+id/usernameLogin"
        app:layout_constraintStart_toStartOf="@+id/usernameLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogin"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/userLoginButton"
        app:layout_constraintEnd_toEndOf="@+id/userLoginButton"
        app:layout_constraintStart_toStartOf="@+id/userLoginButton"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin" />

    <TextView
        android:id="@+id/usernameLoginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Username"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/usernameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordLoginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Password"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/passwordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>